--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
     "sqlite": "^4.0.12",
     "sqlite3": "^5.0.0"
   }
