--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   },
   "homepage": "https://github.com/TPHRAB/WorkAgenda#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
+    "connect-sqlite3": "^0.9.11",
+    "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "sqlite": "^4.0.12",
