--- a/client/package.json
+++ b/client/package.json
@@ -50,8 +50,7 @@
     "typescript": "3.9.3"
   },
   "devDependencies": {
-    "eslint-config-prettier": "6.11.0",
-    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-react": "^7.20.5",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "prettier": "2.0.5"
@@ -63,5 +62,6 @@
       "not op_mini all"
     ],
     "development": []
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
