--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^5.2.0",
     "connect-sqlite3": "^0.9.11",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -33,13 +34,5 @@
     "sqlite": "^4.0.12",
     "sqlite3": "^5.0.0"
   },
-  "devDependencies": {
-    "eslint": "^7.5.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-standard": "^4.0.1"
-  }
+  "devDependencies": {}
 }
