--- a/client/package.json
+++ b/client/package.json
@@ -5,20 +5,24 @@
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^21.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "history": "4.10.1",
+    "moment": "^2.27.0",
     "perfect-scrollbar": "1.5.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
+    "react-big-calendar": "^0.26.0",
     "react-chartist": "0.14.3",
     "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
     "react-hook-form": "^6.1.2",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-swipeable-views": "0.13.9"
   },
   "scripts": {
