--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     },
     "rules": {
       "semi": [2, "always"],
-      "no-trailing-spaces": [2, { "skipBlankLines": true }]
+      "no-trailing-spaces": [2, { "skipBlankLines": true }],
+      "max-len": [2, 80, 4, {"ignoreUrls": true}]
     }
 }
