--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
+    "chart.js": "^2.9.3",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "history": "4.10.1",
@@ -18,9 +19,11 @@
     "react": "16.13.1",
     "react-big-calendar": "^0.26.0",
     "react-chartist": "0.14.3",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
     "react-hook-form": "^6.1.2",
+    "react-popup": "^0.10.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "^3.4.3",
     "react-swipeable-views": "0.13.9"
