--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^21.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "chart.js": "^2.9.3",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
