--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "material-ui": "^0.20.2",
     "multer": "^1.4.2",
     "sqlite": "^4.0.12",
     "sqlite3": "^5.0.0"
