--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "history": "4.10.1",
+    "install": "^0.13.0",
     "moment": "^2.27.0",
+    "npm": "^6.14.8",
     "perfect-scrollbar": "1.5.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
@@ -25,6 +27,7 @@
     "react-dom": "16.13.1",
     "react-google-maps": "9.4.5",
     "react-hook-form": "^6.1.2",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "^3.4.3",
     "react-swipeable-views": "0.13.9"
