--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "material-ui": "^0.20.2",
+    "moment": "^2.27.0",
     "multer": "^1.4.2",
     "sqlite": "^4.0.12",
     "sqlite3": "^5.0.0"
